# A2A-Instabids

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Docs/: implementation-plan.md
Documents/GitHub/A2A-Instabids/Docs/agents/: homeowner_agent.md
Documents/GitHub/A2A-Instabids/db/: schema.sql
Documents/GitHub/A2A-Instabids/knowledge-bases/adk-python/: setup.py
Documents/GitHub/A2A-Instabids/src/instabids/agents/: factory.py
Documents/GitHub/A2A-Instabids/src/instabids/tools/: supabase.py
db/: schema.sql
src/Instabids/: data_access.py
src/a2a_types/: core.py
src/agents/: factory.py  recommendation_engine.py
src/agents/bid_card/: agent.py
src/agents/contractor/: agent.py
src/agents/homeowner/: agent.py  flows.py  utils.py
src/agents/matching/: agent.py
src/agents/messaging/: agent.py
src/agents/outreach/: agent.py
src/instabids/: app.py  webhooks.py
src/instabids/agents/: contractor.py  factory.py
src/instabids/tools/: supabase.py
src/memory/: contractor_memory.py  persistent_memory.py
tests/: test_agents.py
